client/src/scss/components/_nav-bar.scss
.side-nav {
  width: 250px;
  height: 100%;
  position: absolute;
  left: 0;
  border-right: solid $secondary_border_gray 1px;
  background-color: $primary_white;
  z-index: 2;
  overflow-y: scroll;

  ul {
    margin: 85px 0 0 0;
    display: flex;
    flex-direction: column;
    width: 100%;
    align-items: center;
    justify-content: flex-start;
    align-items: center;
    list-style: none;

    @media only screen and (max-width: 850px) {
      margin: 115px 0 0 0;
      
    }
  }
  li {
    width: 100%;
    cursor: pointer;
    display: flex;
    align-items: center;
    nav-index: 0;

    &:focus,
    &:active {
      background-color: $hover_orange;
      outline: none;

      p {
        color: $primary_orange;
      }
      .option-icon {
        color: $primary_orange;
      }
    }
  }

  .nav-option {
    margin: 17px 0 17px 30px;
    color: $font_light_gray;
    font-family: 'Sans Pro Semi-Bold', sans-serif;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    width: 100%;

    p {
      margin: auto 0 0 15px;
    }

    .arrow {
      position: absolute;
      right: 20px;

      &:focus,
      &:active {
        outline: none;
        color: $primary_orange;
      }
    }
  }

  .close-icon {
    position: absolute;
    top: 85px;
    right: 20px;
    color: $font_light_gray;
  }
}
.left-margin {
  margin: 17px 0 17px 50px !important;
}

.horizontal-nav {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  padding: 0 50px 0 0;
  position: absolute;
  top: 0;
  height: 70px;
  width: 100%;
  border-bottom: solid $secondary_border_gray 1px;
  background-color: $primary-white;
  z-index: 3;
}

